--- a/netlify.toml
+++ b/netlify.toml
@@ -1,3 +1,9 @@
 [build]
-  command = "ng build --prod";
-  
+  base = "Dev_Portfolio"
+  command = "npm run build --prod";
+  publish = "dist/dev_Portfolio"
+
+[[redirects]]
+  from = "/*"
+  to = "/index.html"
+  status = 200
