--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   base = "."
-  command = "npm run build --prod --force"
+  command = "npm run build --prod "
   publish = "dist/dev_Portfolio"
 
 [[redirects]]
