--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,7 @@
 [build]
   base = "."
-  command = "npm run build --prod "
+  command = "NODE_ENV=production npm run build"
+  commandOrigin = "config"
   publish = "dist/dev_Portfolio"
 
 [[redirects]]
