--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,9 @@
 [build]
   base = "."
-  command = "NODE_ENV=production npm run build"
+  command = "NODE_ENV=production ./node_modules/.bin/ng build --prod"
   commandOrigin = "config"
   publish = "dist/dev_Portfolio"
+  publishOrigin = "config"
 
 [[redirects]]
   from = "/*"
